--- a/iTunesStoreApp/Views/TrackCollectionViewCell.xib
+++ b/iTunesStoreApp/Views/TrackCollectionViewCell.xib
@@ -37,34 +37,18 @@
                                             <rect key="frame" x="0.0" y="347" width="291" height="44"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EA4-Fb-JDe">
-                                                    <rect key="frame" x="8" y="12" width="223" height="20.5"/>
+                                                    <rect key="frame" x="8" y="12" width="275" height="20.5"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nAK-Eh-jEz">
-                                                    <rect key="frame" x="239" y="7" width="44" height="30"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="44" id="HR6-TY-Qoj"/>
-                                                        <constraint firstAttribute="height" constant="30" id="cHh-gE-eGX"/>
-                                                    </constraints>
-                                                    <color key="tintColor" red="1" green="0.49327188729999999" blue="0.47399842739999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    <state key="normal">
-                                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    </state>
-                                                    <connections>
-                                                        <action selector="viewMoreButtonTouchedUp:" destination="gTV-IL-0wX" eventType="touchUpInside" id="YNG-He-4Uq"/>
-                                                    </connections>
-                                                </button>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="44" id="4OZ-QF-5si"/>
-                                                <constraint firstItem="nAK-Eh-jEz" firstAttribute="centerY" secondItem="0nu-Gb-Rw2" secondAttribute="centerY" id="BPa-7I-Z7c"/>
                                                 <constraint firstItem="EA4-Fb-JDe" firstAttribute="centerY" secondItem="0nu-Gb-Rw2" secondAttribute="centerY" id="L1S-fn-eRY"/>
-                                                <constraint firstAttribute="trailing" secondItem="nAK-Eh-jEz" secondAttribute="trailing" constant="8" id="NzV-8I-rZG"/>
                                                 <constraint firstItem="EA4-Fb-JDe" firstAttribute="leading" secondItem="0nu-Gb-Rw2" secondAttribute="leading" constant="8" id="UM4-Q9-jgv"/>
-                                                <constraint firstItem="nAK-Eh-jEz" firstAttribute="leading" secondItem="EA4-Fb-JDe" secondAttribute="trailing" constant="8" id="jSC-Oa-NrG"/>
+                                                <constraint firstAttribute="trailing" secondItem="EA4-Fb-JDe" secondAttribute="trailing" constant="8" id="zDw-vJ-4Pb"/>
                                             </constraints>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H9I-gg-p8f">
@@ -165,7 +149,6 @@
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="307" height="407"/>
             <connections>
-                <outlet property="artistInfoButton" destination="nAK-Eh-jEz" id="pKs-LU-JeW"/>
                 <outlet property="artistLabel" destination="EA4-Fb-JDe" id="l9V-1C-gVP"/>
                 <outlet property="blurView" destination="or3-0W-aCd" id="LHb-3K-Y63"/>
                 <outlet property="containerView" destination="KHI-g2-ewy" id="m4i-rs-Bm0"/>
